white space corrected.

--- a/style.css
+++ b/style.css
@@ -1081,7 +1081,7 @@ h2 {
     
     html,
     body {
-        overflow-x: none;
+        overflow-x: hidden;
         width: 100%;
         margin: 0;
         padding: 0;
